@@ -1,3 +1,6 @@
+2009-05-25
+    * Import Sound Font Instruments
+
 2009-05-12
     * fix for bug# 2790316 - startup crash in OSX when no MIDI port present 
 
